# cashbox

./: README.md  pyproject.toml
docs/: NEXT-THREADS.md  prd.md  roadmap.md
examples/: clob-order-books.json  clob-trades.json  gamma-markets.json  markets.json
src/cashbox/: __init__.py  audit.py  backtests.py  cli.py  evaluator.py  execution.py  experiments.py  gateway.py  gateway_contract.py  governance.py  health.py  ingest.py  market_history.py  models.py  operator_evidence.py  paper.py  persistence.py  polymarket.py  research.py  risk.py  runtime.py  scanner.py  strategy_replay.py
src/cashbox/commands/: __init__.py  backtests.py  base.py  evaluation.py  execution.py  experiments.py  gateway.py  governance.py  health.py  ingest.py  paper.py  research.py  risk.py
tests/: test_agent_gateway.py  test_backtests.py  test_evaluator.py  test_execution.py  test_experiments.py  test_governance.py  test_health.py  test_market_data.py  test_paper.py  test_risk.py  test_runtime.py  test_scanner.py  test_strategy_replay.py
