[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cashbox"
version = "0.1.0"
description = "Fee-aware binary prediction market arb scanner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cashbox-scan = "cashbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
