[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cashbox"
version = "0.1.0"
description = "Prediction-market ingest and research read path"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
cashbox = "cashbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
